--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "expo-image-manipulator": "~13.0.6",
-    "expo-image-picker": "~16.0.6"
+    "expo-image-picker": "~16.0.6",
+    "expo-clipboard": "~7.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
