--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "react-native-web": "~0.19.13",
     "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "~16.0.6",
-    "expo-clipboard": "~7.0.1"
+    "expo-clipboard": "~7.0.1",
+    "expo-audio": "~0.3.5",
+    "expo-av": "~15.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
