--- a/package.json
+++ b/package.json
@@ -14,23 +14,23 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.14",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.37",
+    "expo": "~52.0.42",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.17",
+    "expo-router": "~4.0.20",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.8",
+    "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.3.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -40,7 +40,8 @@
     "expo-image-picker": "~16.0.6",
     "expo-clipboard": "~7.0.1",
     "expo-audio": "~0.3.5",
-    "expo-av": "~15.0.2"
+    "expo-av": "~15.0.2",
+    "jest-expo": "~52.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
