--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "@react-navigation/native": "^7.0.14",
     "date-fns": "^4.1.0",
     "expo": "~52.0.42",
+    "expo-audio": "~0.3.5",
+    "expo-av": "~15.0.2",
+    "expo-clipboard": "~7.0.1",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-image-manipulator": "~13.0.6",
+    "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
     "expo-secure-store": "~14.0.1",
@@ -28,6 +33,7 @@
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.3.1",
+    "jest-expo": "~52.0.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
@@ -36,12 +42,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "expo-image-manipulator": "~13.0.6",
-    "expo-image-picker": "~16.0.6",
-    "expo-clipboard": "~7.0.1",
-    "expo-audio": "~0.3.5",
-    "expo-av": "~15.0.2",
-    "jest-expo": "~52.0.6"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
