Added and fixed things

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "react-native-gesture-handler": "~2.20.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
