languages is working for a small portion

--- a/app.json
+++ b/app.json
@@ -49,7 +49,8 @@
         {
           "microphonePermission": "Allow MyJournal to access your microphone."
         }
-      ]
+      ],
+      "expo-localization"
     ],
     "experiments": {
       "typedRoutes": true
