--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
+    "expo-localization": "~16.0.1",
     "expo-router": "~4.0.20",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.22",
@@ -34,6 +35,7 @@
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.3.1",
+    "i18n-js": "^4.5.1",
     "jest-expo": "~52.0.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
