--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.1.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.0.14",
     "date-fns": "^4.1.0",
     "expo": "~52.0.42",
