--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "expo-sharing": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
