--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-localization": "~16.0.1",
     "expo-router": "~4.0.20",
     "expo-secure-store": "~14.0.1",
+    "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
@@ -51,8 +52,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "uuid": "^11.1.0",
-    "expo-sharing": "~13.0.1"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
