--- a/package.json
+++ b/package.json
@@ -16,52 +16,52 @@
     "@expo-google-fonts/poppins": "^0.3.0",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.1.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.0.14",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.42",
-    "expo-audio": "~0.3.5",
-    "expo-av": "~15.0.2",
-    "expo-clipboard": "~7.0.1",
-    "expo-font": "~13.0.4",
-    "expo-haptics": "~14.0.1",
-    "expo-image-manipulator": "~13.0.6",
-    "expo-image-picker": "~16.0.6",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-linking": "~7.0.5",
-    "expo-localization": "~16.0.1",
-    "expo-router": "~4.0.20",
-    "expo-secure-store": "~14.0.1",
-    "expo-sharing": "~13.0.1",
-    "expo-splash-screen": "~0.29.22",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.9",
-    "expo-web-browser": "~14.0.2",
+    "expo": "^53.0.0-preview.7",
+    "expo-audio": "~0.4.1",
+    "expo-av": "~15.1.1",
+    "expo-clipboard": "~7.1.1",
+    "expo-font": "~13.1.1",
+    "expo-haptics": "~14.1.1",
+    "expo-image-manipulator": "~13.1.2",
+    "expo-image-picker": "~16.1.1",
+    "expo-linear-gradient": "~14.1.1",
+    "expo-linking": "~7.1.1",
+    "expo-localization": "~16.1.1",
+    "expo-router": "~5.0.2-preview.3",
+    "expo-secure-store": "~14.2.0",
+    "expo-sharing": "~13.1.2",
+    "expo-splash-screen": "~0.30.2",
+    "expo-status-bar": "~2.2.0",
+    "expo-system-ui": "~5.0.2",
+    "expo-web-browser": "~14.1.2",
     "firebase": "^11.3.1",
     "i18n-js": "^4.5.1",
-    "jest-expo": "~52.0.6",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
+    "jest-expo": "~53.0.0-preview.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.0",
     "react-native-calendars": "^1.1310.0",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13",
+    "react-native-reanimated": "~3.17.3",
+    "react-native-safe-area-context": "5.3.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
-    "@types/react-native": "^0.73.0",
+    "@types/react": "~19.0.10",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
     "react-test-renderer": "18.3.1",
-    "typescript": "~5.3.3"
+    "ts-node": "^10.9.2",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
